--- a/pug/templates/page/index.pug
+++ b/pug/templates/page/index.pug
@@ -6,4 +6,5 @@ block variables
 block content
   div(class='site-hero')
     div(class='container')
-      p(class='site-hero__introduction') Hey, I'm Adam; #[strong I develop accessible and modern sites and applications.] I make Spruce CSS and contribute to Root. I like static sites; I primarily work with 11ty, Gatsby and WordPress.
+      div(class='site-hero__inner')
+        p(class='site-hero__introduction') Hey, I'm Adam; #[strong I develop accessible and modern sites and applications.] I make Spruce CSS and contribute to Root. I like static sites; I primarily work with 11ty, Gatsby and WordPress.
