--- a/pug/templates/components/header.pug
+++ b/pug/templates/components/header.pug
@@ -1,17 +1,15 @@
 include ../../assets/mixins
 
 header(class='site-header')
-  div(class='container')
-    div(class='site-header__inner')
-      a(href='index.html' class='site-header__logo')
-        img(src='../../assets/img/adam-laki-logo.svg' alt='Spruce CSS' width='140')
-      nav(class="site-naviagation")
-        ul
-          li
-            a(href='#') Home
-          li
-            a(href='#') About
-          li
-            a(href='#') Blog
-          li
-            a(href='#') Contact
+  a(href='index.html')
+    img(src='../../assets/img/adam-laki-logo.svg' alt='Spruce CSS' width='140' class='site-header__logo')
+  nav(class="site-navigation")
+    ul
+      li
+        a(href='#') Home
+      li
+        a(href='#') About
+      li
+        a(href='#') Blog
+      li
+        a(href='#') Contact
