--- a/assets/scss/config/_config.scss
+++ b/assets/scss/config/_config.scss
@@ -8,6 +8,7 @@
   $settings: (
     prefix: adam
   ),
+  $font-size-base: 1.2375rem,
   $font-size-ratio: 1.333,
   $border-radius-sm: 0,
   $border-radius-lg: 0,
