--- a/pug/templates/components/footer.pug
+++ b/pug/templates/components/footer.pug
@@ -1,6 +1,12 @@
 -var year = new Date().getFullYear();
 
 footer(class='footer')
-  div(class='container')
-    div(class='footer__inner')
-      p(class='footer__copyright') © #{year} Cone
+  div(class='block')
+    h3(class='block__title') Adam Laki
+    p(class='block__value') Front-end Developer
+  div(class='block')
+    h3(class='block__title') Contact
+    p(class='block__value') #[a(href='mailto:info@adamlaki.com') info@adamlaki.com]
+  div(class='block')
+    h3(class='block__title') Social
+    p(class='block__value') #[a(href='#') Twitter],  #[a(href='#') GitHub]
