--- a/pug/templates/components/header.pug
+++ b/pug/templates/components/header.pug
@@ -3,6 +3,7 @@ include ../../assets/mixins
 header(class='site-header')
   a(href='index.html')
     img(src='../../assets/img/adam-laki-logo.svg' alt='Spruce CSS' width='140' class='site-header__logo')
+  // p My wife said I have to place something here.
   nav(class="site-navigation")
     ul
       li
