--- a/pug/templates/page/index.pug
+++ b/pug/templates/page/index.pug
@@ -8,9 +8,11 @@ block content
     img(src='../../assets/img/bauhause.svg')
     p(class='site-hero__introduction') Hey, I'm Adam; #[strong I develop accessible and modern sites and applications.] I make Spruce CSS and contribute to Root. I like static sites; I primarily work with 11ty, Gatsby and WordPress.
   div(class='projects')
-    a(class='project')
-      h2(class='h4') Spruce CSS
-      p A low-level, lightweight and modern CSS design system, authoring tool built on Sass. Give your project a solid foundation.
-    a(class='project')
-      h2(class='h4') Root
-      p Root is an admin package for Laravel applications with extension support.
+    h2(class='section-title') Projects
+    div(class='projects__inner')
+      a(class='project')
+        h2(class='h4') Spruce CSS
+        p A low-level, lightweight and modern CSS design system, authoring tool built on Sass. Give your project a solid foundation.
+      a(class='project')
+        h2(class='h4') Root
+        p Root is an admin package for Laravel applications with extension support.
