--- a/assets/scss/components/_index.scss
+++ b/assets/scss/components/_index.scss
@@ -1,5 +1,7 @@
 @forward 'header';
+@forward 'lang-switcher';
 @forward 'navigation';
 @forward 'container';
 @forward 'hero';
+@forward 'blog-card';
 @forward 'footer';
