--- a/pug/templates/layout.pug
+++ b/pug/templates/layout.pug
@@ -6,7 +6,7 @@ html(lang='en')
   head
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    title Spruce CSS Starter Kit - #{title}
+    title Adam Laki - #{title}
     link(rel='icon' href='../../assets/img/favicon.png' sizes='32x32')
     link(rel='preconnect' href='https://fonts.googleapis.com')
     link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin)
