--- a/pug/templates/page/index.pug
+++ b/pug/templates/page/index.pug
@@ -8,11 +8,14 @@ block content
     img(src='../../assets/img/bauhause.svg')
     p(class='site-hero__introduction') Hey, I'm Adam; #[strong I develop accessible and modern sites and applications.] I make Spruce CSS and contribute to Root. I like static sites; I primarily work with 11ty, Gatsby and WordPress.
   div(class='projects')
-    h2(class='section-title') Projects
+    h2(class='section-title h3') Projects
     div(class='projects__inner')
-      a(class='project')
+      div(class='project')
         h2(class='h4') Spruce CSS
-        p A low-level, lightweight and modern CSS design system, authoring tool built on Sass. Give your project a solid foundation.
-      a(class='project')
+        p A low-level, lightweight and modern CSS design system, authoring tool built on Sass.
+      div(class='project')
         h2(class='h4') Root
         p Root is an admin package for Laravel applications with extension support.
+      div(class='project')
+        h2(class='h4') Byte-Sizes Acessibility
+        p Learn something new about accessibility with short and solid articles (less than 150 words).
