Start with 11ty

--- a/src/scss/components/_blog-card.scss
+++ b/src/scss/components/_blog-card.scss
@@ -1,7 +1,7 @@
 @use 'sprucecss/scss/spruce';
 
 .blog-list {
-  @include spruce.layout-stack(m);
+  @include spruce.layout-stack(l);
   margin-block-start: spruce.spacer(l);
 }
 
