--- a/src/scss/config/_styles.scss
+++ b/src/scss/config/_styles.scss
@@ -1,4 +1,6 @@
 @use 'sprucecss/scss/spruce';
 
 @include spruce.generate-content;
-@include spruce.generate-form;
+@include spruce.generate-btn('.btn');
+
+.btn--primary { @include spruce.btn-variant(primary); }
