--- a/src/_includes/partials/site-header.html
+++ b/src/_includes/partials/site-header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <a href="/">
-    <img class="site-header__logo" src="/img/adam-laki-logo.svg" alt="Adam Laki" width="140">
+    <img class="site-header__logo" src="/img/adam-laki-logo.svg" alt="Adam Laki" height="112" width="93">
   </a>
   <div class="site-header__helper">
     <nav class="site-navigation">
