--- a/src/css/main.css
+++ b/src/css/main.css
@@ -707,7 +707,6 @@ samp {
   font-size: clamp(1.7rem, 2vw + 1rem, 2rem);
 }
 
-/* stylelint-disable */
 .btn {
   align-items: center;
   border: 0;
@@ -789,516 +788,14 @@ samp {
   outline: 2px solid transparent;
 }
 
-.btn--secondary {
-  background-color: var(--adam-btn-color-secondary-background);
-  color: var(--adam-btn-color-secondary-foreground);
+.skip-link {
+  inset: -50vh auto auto 1.5rem;
+  position: fixed;
 }
-.btn--secondary:hover {
-  background-color: var(--adam-btn-color-secondary-background-hover);
-  color: var(--adam-btn-color-secondary-foreground-hover);
-}
-.btn--secondary:focus {
-  box-shadow: 0 0 0 0.25rem var(--adam-btn-color-secondary-shadow-focus);
-  outline: 2px solid transparent;
+.skip-link:focus {
+  inset-block-start: 1.5rem;
 }
 
-.form-file::file-selector-button {
-  align-items: center;
-  border: 0;
-  border-radius: 0;
-  cursor: pointer;
-  display: inline-flex;
-  font-size: 1.1375rem;
-  font-weight: 500;
-  gap: 0.5rem;
-  justify-content: center;
-  line-height: 1;
-  padding: 0.75em 1em;
-  text-align: start;
-  text-decoration: none;
-  transition-duration: var(--adam-transition-duration);
-  transition-property: background-color, box-shadow, color;
-  transition-timing-function: var(--adam-transition-timing-function);
-}
-
-.form-file:focus {
-  outline-color: transparent;
-  outline-style: solid;
-}
-
-.form-file:disabled,
-.form-file--disabled {
-  opacity: 0.5;
-  pointer-events: none;
-}
-
-.form-file--sm::file-selector-button {
-  font-size: 0.8rem;
-  padding: 0.5em;
-}
-
-.form-file--lg::file-selector-button {
-  padding: 0.9em 1.15em;
-}
-@media (min-width: 64em) {
-  .form-file--lg::file-selector-button {
-    font-size: 1.15rem;
-  }
-}
-
-.form-file--block::file-selector-button {
-  width: 100%;
-}
-
-.form-file {
-  display: block;
-}
-.form-file:focus-within::file-selector-button {
-  background-color: transparent;
-  box-shadow: 0 0 0 2px var(--adam-btn-color-primary-background) inset;
-  color: var(--adam-btn-color-primary-background);
-}
-.form-file::file-selector-button {
-  background-color: var(--adam-btn-color-primary-background);
-  color: var(--adam-btn-color-primary-foreground);
-  margin-inline-end: 1rem;
-}
-.form-file::file-selector-button:hover {
-  background-color: var(--adam-btn-color-primary-background-hover);
-  color: var(--adam-btn-color-primary-foreground-hover);
-}
-
-.form-label {
-  color: var(--adam-form-color-label);
-  line-height: 1.5;
-}
-.form-label--sm {
-  font-size: 0.9rem;
-}
-.form-label--lg {
-  font-size: 1.1rem;
-}
-
-.form-control {
-  appearance: none;
-  background-color: var(--adam-form-color-background);
-  border: 1px solid var(--adam-form-color-border);
-  border-radius: 0;
-  box-sizing: border-box;
-  color: var(--adam-form-color-text);
-  display: block;
-  font-size: 1.1375rem;
-  line-height: 1.5;
-  padding: 0.5em 0.75em;
-  transition-duration: var(--adam-transition-duration);
-  transition-property: border, box-shadow;
-  transition-timing-function: var(--adam-transition-timing-function);
-  width: 100%;
-}
-.form-control::placeholder {
-  color: var(--adam-form-color-placeholder);
-}
-.form-control:focus {
-  border-color: var(--adam-form-color-border-focus);
-  box-shadow: 0 0 0 0.25rem var(--adam-form-color-shadow-focus);
-  outline: 2px solid transparent;
-}
-.form-control[type=color] {
-  height: calc(1.5em + ( 0.5em + 1px ) * 2);
-  padding: 0.5em;
-}
-.form-control[type=color]::-webkit-color-swatch-wrapper {
-  padding: 0;
-}
-.form-control[type=color]::-moz-color-swatch {
-  border: 0;
-  border-radius: 0;
-}
-.form-control[type=color]::-webkit-color-swatch {
-  border: 0;
-  border-radius: 0;
-}
-.form-control[disabled], .form-control[disabled=true] {
-  background-color: var(--adam-form-color-background-disabled);
-  border-color: var(--adam-form-color-border-disabled);
-  cursor: not-allowed;
-}
-textarea.form-control {
-  height: 6rem;
-  min-height: 6rem;
-  resize: vertical;
-}
-
-.form-control--valid, .form-control--invalid {
-  background-position: center right 0.5em;
-  background-repeat: no-repeat;
-  background-size: 1.25em auto;
-  padding-inline-end: 2em;
-}
-html[dir=rtl] .form-control--valid, html[dir=rtl] .form-control--invalid {
-  background-position: center left 0.5em;
-}
-.form-control--valid {
-  background-image: url('data:image/svg+xml,%3csvg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"%3e%3cpath d="M12,2c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm0,1.667c4.599,-0 8.333,3.734 8.333,8.333c0,4.599 -3.734,8.333 -8.333,8.333c-4.599,0 -8.333,-3.734 -8.333,-8.333c-0,-4.599 3.734,-8.333 8.333,-8.333Zm-1.476,10.182l-2.984,-2.984c-0.065,-0.065 -0.17,-0.065 -0.235,0l-0.943,0.943c-0.065,0.065 -0.065,0.171 -0,0.236l4.043,4.042c0.033,0.033 0.076,0.05 0.119,0.049c0.044,0.001 0.087,-0.016 0.12,-0.049l6.994,-6.994c0.065,-0.065 0.065,-0.17 0,-0.235l-0.943,-0.943c-0.065,-0.065 -0.17,-0.065 -0.235,-0l-5.936,5.935Z" style="fill:hsl%28150deg, 100%, 33%%29;"/%3e%3c/svg%3e');
-  border-color: var(--adam-alert-color-success);
-}
-.form-control--valid:focus {
-  border-color: var(--adam-form-color-valid);
-  box-shadow: 0 0 0 0.25rem var(--adam-form-color-valid-shadow);
-  outline: 2px solid transparent;
-}
-.form-control--invalid {
-  background-image: url('data:image/svg+xml,%3csvg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"%3e%3cpath d="M12,2c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm0,1.667c4.599,-0 8.333,3.734 8.333,8.333c0,4.599 -3.734,8.333 -8.333,8.333c-4.599,0 -8.333,-3.734 -8.333,-8.333c-0,-4.599 3.734,-8.333 8.333,-8.333Zm0.813,11.649c-0,-0.081 -0.065,-0.146 -0.146,-0.146l-1.334,0c-0.081,0 -0.146,0.065 -0.146,0.146l0,1.169c0,0.08 0.065,0.146 0.146,0.146l1.334,-0c0.081,-0 0.146,-0.066 0.146,-0.146l-0,-1.169Zm-0,-7.784c-0,-0.09 -0.073,-0.163 -0.163,-0.163l-1.3,0c-0.09,0 -0.163,0.073 -0.163,0.163l0,6.351c0,0.09 0.073,0.163 0.163,0.163l1.3,-0c0.09,-0 0.163,-0.073 0.163,-0.163l-0,-6.351Z" style="fill:hsl%280deg, 71%, 51%%29;"/%3e%3c/svg%3e');
-  border-color: var(--adam-alert-color-danger);
-}
-.form-control--invalid:focus {
-  border-color: var(--adam-form-color-invalid);
-  box-shadow: 0 0 0 0.25rem var(--adam-form-color-invalid-shadow);
-  outline: 2px solid transparent;
-}
-.form-control--sm {
-  font-size: 0.9rem;
-  padding: 0.25em 0.5em;
-}
-.form-control--sm[type=color] {
-  height: calc(1.5em + ( 0.25em + 1px ) * 2);
-  padding: 0.25em;
-}
-.form-control--lg {
-  font-size: 1.1rem;
-  padding: 0.65em 1em;
-}
-.form-control--lg[type=color] {
-  height: calc(1.5em + ( 0.75em + 1px ) * 2);
-  padding: 0.75em;
-}
-
-select.form-control:not([multiple]):not([size]) {
-  background-image: url('data:image/svg+xml,%3csvg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"%3e%3cpath d="M12,12.507l-3.816,-3.815c-0.171,-0.172 -0.45,-0.172 -0.622,-0l-0.933,0.933c-0.172,0.172 -0.172,0.451 0,0.623l5.06,5.06c0.172,0.172 0.45,0.172 0.622,0l5.06,-5.06c0.172,-0.172 0.172,-0.451 -0,-0.623l-0.933,-0.933c-0.172,-0.172 -0.451,-0.172 -0.622,-0l-3.816,3.815Z" style="fill:hsl%280deg, 0%, 0%%29;"/%3e%3c/svg%3e');
-  background-position: center right 0.5em;
-  background-repeat: no-repeat;
-  background-size: 1.25em auto;
-  padding-inline-end: 2em;
-}
-html[dir=rtl] select.form-control:not([multiple]):not([size]) {
-  background-position: center left 0.5em;
-}
-
-.form-check {
-  align-items: center;
-  display: inline-flex;
-  gap: 0.5rem;
-}
-
-.form-check--sm .form-check__control {
-  font-size: 1.1375rem;
-}
-
-.form-check--lg .form-check__control {
-  font-size: 1.1rem;
-}
-
-.form-check__control {
-  appearance: none;
-  background-color: var(--adam-form-color-background);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  border: 1px solid var(--adam-form-color-border);
-  flex-shrink: 0;
-  font-size: 1.125rem;
-  height: 1em;
-  line-height: 1;
-  margin-block-end: -0.1em;
-  transition-duration: var(--adam-transition-duration);
-  transition-property: border, box-shadow;
-  transition-timing-function: var(--adam-transition-timing-function);
-  width: 1em;
-}
-.form-check__control[type=radio] {
-  border-radius: 50%;
-}
-.form-check__control[type=checkbox] {
-  border-radius: 0;
-}
-.form-check__control:focus {
-  border-color: var(--adam-form-color-border-focus);
-  box-shadow: 0 0 0 0.25rem var(--adam-form-color-shadow-focus);
-  outline: 2px solid transparent;
-}
-.form-check__control:checked {
-  background-color: var(--adam-form-color-check-background);
-  border-color: var(--adam-form-color-check-background);
-}
-.form-check__control:checked[type=radio] {
-  background-image: url('data:image/svg+xml,%3csvg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"%3e%3ccircle cx="12" cy="12" r="6" style="fill:hsl%280deg, 0%, 100%%29;"/%3e%3c/svg%3e');
-}
-.form-check__control:checked[type=checkbox] {
-  background-image: url('data:image/svg+xml,%3csvg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"%3e%3cpath d="M9.525,13.777l-2.411,-2.412c-0.234,-0.233 -0.613,-0.233 -0.846,0l-1.27,1.27c-0.233,0.233 -0.233,0.612 0,0.846l4.104,4.103c0.116,0.117 0.269,0.175 0.422,0.175l0.003,0c0.152,0 0.305,-0.058 0.421,-0.175l9.054,-9.053c0.233,-0.234 0.233,-0.613 -0,-0.846l-1.27,-1.269c-0.233,-0.234 -0.612,-0.234 -0.846,-0l-7.361,7.361Z" style="fill:hsl%280deg, 0%, 100%%29;"/%3e%3c/svg%3e');
-}
-.form-check__control:indeterminate[type=checkbox] {
-  background-image: url('data:image/svg+xml,%3csvg viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg"%3e%3cpath d="M19.5,11.1c-0,-0.331 -0.269,-0.6 -0.6,-0.6l-13.8,0c-0.331,0 -0.6,0.269 -0.6,0.6l0,1.8c0,0.331 0.269,0.6 0.6,0.6l13.8,0c0.331,0 0.6,-0.269 0.6,-0.6l-0,-1.8Z" style="fill:hsl%280deg, 0%, 100%%29;"/%3e%3c/svg%3e');
-  background-color: var(--adam-form-color-check-background);
-  border-color: var(--adam-form-color-check-background);
-}
-.form-check__control:disabled {
-  background-color: var(--adam-form-color-background-disabled);
-  border-color: var(--adam-form-color-border-disabled);
-  cursor: not-allowed;
-}
-.form-check__control:disabled + .form-check__label {
-  opacity: 0.5;
-}
-
-.form-check__label {
-  line-height: calc(2px + 2.75ex + 2px);
-}
-
-.form-switch {
-  align-items: center;
-  display: inline-flex;
-  gap: 0.5rem;
-}
-.form-switch--block {
-  justify-content: space-between;
-  width: 100%;
-}
-
-.form-switch--sm .form-switch__control {
-  font-size: 1.1375rem;
-}
-
-.form-switch--lg .form-switch__control {
-  font-size: 1.1rem;
-}
-
-.form-switch__control {
-  background-image: url('data:image/svg+xml,%3csvg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"%3e%3ccircle cx="12" cy="12" r="8.5" style="fill:hsl%28260deg, 4%, 70%%29;"/%3e%3c/svg%3e');
-  appearance: none;
-  background-color: var(--adam-form-color-background);
-  background-position: left center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  border: 1px solid var(--adam-form-color-border);
-  border-radius: 2em;
-  flex-shrink: 0;
-  font-size: 1.125rem;
-  height: 1em;
-  line-height: 1;
-  margin-block-end: -0.1em;
-  transition-duration: var(--adam-transition-duration);
-  transition-property: background-position border, box-shadow;
-  transition-timing-function: var(--adam-transition-timing-function);
-  width: 2em;
-}
-.form-switch__control:focus {
-  border-color: var(--adam-form-color-border-focus);
-  box-shadow: 0 0 0 0.25rem var(--adam-form-color-shadow-focus);
-  outline: 2px solid transparent;
-}
-.form-switch__control:checked {
-  background-image: url('data:image/svg+xml,%3csvg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"%3e%3ccircle cx="12" cy="12" r="8.5" style="fill:hsl%280deg, 0%, 100%%29;"/%3e%3c/svg%3e');
-  background-color: var(--adam-form-color-check-background);
-  background-position: right center;
-  border-color: var(--adam-form-color-check-background);
-}
-.form-switch__control:disabled {
-  background-color: var(--adam-form-color-background-disabled);
-  border-color: var(--adam-form-color-border-disabled);
-  cursor: not-allowed;
-}
-.form-switch__control:disabled + .form-switch__label {
-  opacity: 0.5;
-}
-
-[dir=rtl] .form-switch__control {
-  background-position: right center;
-}
-[dir=rtl] .form-switch__control:checked {
-  background-position: left center;
-}
-
-.form-switch__label {
-  line-height: calc(2px + 2.75ex + 2px);
-}
-
-.form-description {
-  color: var(--adam-form-color-text);
-  display: block;
-  line-height: 1.5;
-}
-
-fieldset {
-  border: 0;
-  margin: 0;
-  padding: 0;
-}
-fieldset > * {
-  margin-block-end: 0;
-  margin-block-start: 0;
-}
-fieldset > * + * {
-  margin-block-start: 1rem;
-}
-fieldset + fieldset {
-  margin-block-start: 3rem;
-}
-
-legend {
-  color: var(--adam-form-color-legend);
-  font-size: clamp(1.1375rem, 5vw, 1.421875rem);
-  font-weight: 700;
-}
-
-.form-group {
-  display: flex;
-  flex-direction: column;
-  gap: 0.25rem;
-}
-.form-group--horizontal-check {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 1rem;
-}
-.form-group--vertical-check {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 0;
-}
-.form-group--vertical-check > * {
-  margin-block-end: 0;
-  margin-block-start: 0;
-}
-.form-group--vertical-check > * + * {
-  margin-block-start: 1rem;
-}
-.form-group--row {
-  --gap: 0.25rem 1rem;
-  --label-column: 10rem;
-  align-items: center;
-  display: grid;
-  gap: var(--gap);
-  grid-template-columns: minmax(0, 1fr);
-}
-@media (min-width: 48em) {
-  .form-group--row {
-    grid-template-columns: minmax(0, var(--label-column)) minmax(0, 1fr);
-  }
-}
-@media (min-width: 48em) {
-  .form-group--row .form-description,
-.form-group--row .field-feedback {
-    grid-column-start: 2;
-  }
-}
-.form-group--stacked {
-  display: flex;
-  flex-direction: column;
-}
-@media (min-width: 48em) {
-  .form-group--stacked {
-    flex-direction: row;
-  }
-}
-.form-group--stacked > * {
-  /* stylelint-disable */
-  /* stylelint-enable */
-}
-.form-group--stacked > * + * {
-  border-start-end-radius: 0;
-  border-start-start-radius: 0;
-  margin-block-start: -1px;
-}
-@media (min-width: 48em) {
-  .form-group--stacked > * + * {
-    border-end-start-radius: 0;
-    border-start-end-radius: 0;
-    margin-block-start: 0;
-    margin-inline-start: -1px;
-  }
-}
-.form-group--stacked > *:not(:last-child) {
-  border-end-end-radius: 0;
-  border-end-start-radius: 0;
-}
-@media (min-width: 48em) {
-  .form-group--stacked > *:not(:last-child) {
-    border-end-end-radius: 0;
-    border-start-end-radius: 0;
-  }
-}
-@media (min-width: 48em) {
-  .form-group--stacked > *:first-child {
-    border-end-start-radius: 0;
-  }
-}
-.form-group--stacked > *:focus {
-  z-index: 2;
-}
-
-.form-row--mixed {
-  --col-width: 20ch;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-}
-.form-row--mixed > * {
-  flex: 1 1 var(--col-width);
-}
-
-.field-feedback {
-  display: block;
-  line-height: 1.5;
-}
-.field-feedback--valid {
-  color: var(--adam-alert-color-success);
-}
-.field-feedback--invalid {
-  color: var(--adam-alert-color-danger);
-}
-
-.form-range {
-  appearance: none;
-  margin-block-start: calc(1rem / 2 - 0.25rem / 2);
-}
-.form-range:focus {
-  outline: none;
-}
-.form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 0.25rem var(--adam-form-color-range-thumb-shadow);
-}
-.form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 0.25rem var(--adam-form-color-range-thumb-shadow);
-}
-.form-range::-webkit-slider-runnable-track {
-  background-color: var(--adam-form-color-range-track-background);
-  border-radius: 0.15rem;
-  height: 0.25rem;
-}
-.form-range::-moz-range-track {
-  background-color: var(--adam-form-color-range-track-background);
-  border-radius: 0.15rem;
-  height: 0.25rem;
-}
-.form-range::-webkit-slider-thumb {
-  appearance: none;
-  background-color: var(--adam-form-color-range-thumb-background);
-  border-radius: 0.25rem;
-  height: 1rem;
-  margin-block-start: calc(0.25rem / 2 - 1rem / 2);
-  width: 1rem;
-}
-.form-range::-moz-range-thumb {
-  background-color: var(--adam-form-color-range-thumb-background);
-  border: 0; /*Removes extra border that FF applies*/
-  border-radius: 0.25rem;
-  height: 1rem;
-  width: 1rem;
-}
-
-/* stylelint-enable */
 .site-header {
   align-items: flex-start;
   display: flex;
