--- a/src/_includes/partials/site-footer.html
+++ b/src/_includes/partials/site-footer.html
@@ -1,14 +1,14 @@
 <footer class="footer">
-  <div class="block">
-    <h3 class="block__title">Adam Laki</h3>
-    <p class="block__value">Front-end Developer</p>
+  <div class="footer-info-card">
+    <h3 class="footer-info-card__title">Adam Laki</h3>
+    <p class="footer-info-card__value">Front-end Developer</p>
   </div>
-  <div class="block">
-    <h3 class="block__title">Contact</h3>
-    <p class="block__value"><a href="mailto:{{ site.authorEmail }}">{{ site.authorEmail }}</a></p>
+  <div class="footer-info-card">
+    <h3 class="footer-info-card__title">Contact</h3>
+    <p class="footer-info-card__value"><a href="mailto:{{ site.authorEmail }}">{{ site.authorEmail }}</a></p>
   </div>
-  <div class="block">
-    <h3 class="block__title">Social</h3>
-    <p class="block__value"><a href="#">Twitter</a>,  <a href="#">GitHub</a></p>
+  <div class="footer-info-card">
+    <h3 class="footer-info-card__title">Social</h3>
+    <p class="footer-info-card__value"><a href="#">Twitter</a>,  <a href="#">GitHub</a></p>
   </div>
 </footer>
