--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -2,7 +2,8 @@
 @forward 'header';
 @forward 'lang-switcher';
 @forward 'navigation';
-@forward 'container';
 @forward 'hero';
+@forward 'projects';
+@forward 'container';
 @forward 'blog-card';
 @forward 'footer';
