--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -1,5 +1,6 @@
 {% extends "layouts/base.html" %}
 
 {% block content %}
-hello home
+  {% include "partials/site-hero.html" %}
+  {% include "partials/projects.html" %}
 {% endblock %}
