Add page layout

--- a/src/_includes/layouts/page.html
+++ b/src/_includes/layouts/page.html
@@ -1,22 +1,10 @@
 {% extends "layouts/base.html" %}
 
-{% set recommendedHowToUse = helpers.getSiblingContent(collections.howToUse, page) %}}}
-
 {% block content %}
-  {% include "partials/site-header.html" %}
-  <div class="l-page">
-    <div class="container--narrow">
-      {% include "partials/page-heading.html" %}
-      <div class="l-page__inner">
-        <div class="post-content">
-          {{ content | safe }}
-
-          {% if page.url.includes('adatvedelem') %}
-            {% include "partials/cookies.html" %}
-          {% endif %}
-        </div>
-      </div>
+  <div class="post">
+    <h1 class="post-title">{{ title }}</h1>
+    <div class="post-content">
+      {{ content | safe }}
     </div>
   </div>
-  {% include "partials/support.html" %}
 {% endblock %}
