--- a/src/_includes/partials/projects.html
+++ b/src/_includes/partials/projects.html
@@ -1,5 +1,5 @@
 <div class="projects">
-  <h2 class="section-title">{{ projects.title }}</h2>
+  <h2 class="section-title h3">{{ projects.title }}</h2>
   <div class="projects__inner">
     {% if projects.cards %}
       {% for card in projects.cards %}
