--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -1,7 +1,8 @@
 {% set assetHash = global.random() %}
+{% set lang = locale if locale else 'en' %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ lang }}">
   <head>
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex" />
