--- a/src/_includes/partials/meta-info.html
+++ b/src/_includes/partials/meta-info.html
@@ -1,4 +1,4 @@
-{% set pageTitle = title + ' - ' + site.name %}
+{% set pageTitle = title + ' - ' + site[lang].name %}
 
 {% if site.name === title %}
   {% set pageTitle = title %}
@@ -31,14 +31,14 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta property="og:image" content="{{ socialImage }}" />
   <meta name="twitter:image" content="{{ socialImage }}" />
-  <meta property="og:image:alt" content="Page image for {{ site.name }}" />
-  <meta name="twitter:image:alt" content="Page image for {{ site.name }}" />
+  <meta property="og:image:alt" content="Page image for {{ site[lang].name }}" />
+  <meta name="twitter:image:alt" content="Page image for {{ site[lang].name }}" />
 {% endif %}
 
 {% if metaDesc %}
-  <meta name="description" content="{{ metaDesc }}" />
-  <meta name="twitter:description" content="{{ metaDesc }}" />
-  <meta property="og:description" content="{{ metaDesc }}" />
+  <meta name="description" content="{{ metaDesc[lang] }}" />
+  <meta name="twitter:description" content="{{ metaDesc[lang] }}" />
+  <meta property="og:description" content="{{ metaDesc[lang] }}" />
 {% endif %}
 
 <link rel="icon" href="/img/favicon.svg" type="image/svg+xml" />
