--- a/src/css/main.css
+++ b/src/css/main.css
@@ -791,11 +791,17 @@ samp {
 .layout__inner {
   align-items: flex-start;
   display: grid;
-  gap: 1.5rem;
-  grid-template-columns: 10rem 1fr;
+  gap: 3rem;
+  grid-template-columns: minmax(0, 1fr);
   padding-block: var(--adam-container-gap);
 }
+@media (min-width: 48em) {
+  .layout__inner {
+    grid-template-columns: minmax(0, 10rem) minmax(0, 1fr);
+  }
+}
 .layout__body {
+  --spacer: 3rem;
   margin-inline: auto;
   max-width: 55rem;
   width: 100%;
@@ -805,7 +811,12 @@ samp {
   margin-block-start: 0;
 }
 .layout__body > * + * {
-  margin-block-start: 7rem;
+  margin-block-start: var(--spacer);
+}
+@media (min-width: 48em) {
+  .layout__body {
+    --spacer: 7rem;
+  }
 }
 
 .skip-link {
@@ -819,12 +830,16 @@ samp {
 .site-header {
   align-items: flex-start;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   gap: 1.5rem;
-  min-height: calc(100vh - var(--adam-container-gap) * 2);
-  position: sticky;
   inset-block-start: var(--adam-container-gap);
+  justify-content: space-between;
+}
+@media (min-width: 48em) {
+  .site-header {
+    flex-direction: column;
+    min-height: calc(100vh - var(--adam-container-gap) * 2);
+    position: sticky;
+  }
 }
 .site-header__logo {
   height: 7rem;
