--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,12 +3,15 @@
 .site-header {
   align-items: flex-start;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   gap: spruce.spacer(m);
-  min-height: calc(100vh - #{spruce.get-css-variable(--container-gap)} * 2);
-  position: sticky;
   inset-block-start: spruce.get-css-variable(--container-gap);
+  justify-content: space-between;
+
+  @include spruce.breakpoint(sm) {
+    flex-direction: column;
+    min-height: calc(100vh - #{spruce.get-css-variable(--container-gap)} * 2);
+    position: sticky;
+  }
 
   &__logo {
     height: 7rem;
