--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -5,7 +5,7 @@
 
   &__introduction {
     @include spruce.layout-stack(m);
-    font-size: spruce.responsive-font-size(2rem);
+    font-size: spruce.responsive-font-size(2rem, 40);
     line-height: spruce.$line-height-heading;
   }
 }
