--- a/src/scss/components/_projects.scss
+++ b/src/scss/components/_projects.scss
@@ -4,23 +4,25 @@
   @include spruce.layout-stack(m);
 
   &__inner {
-    @include spruce.layout-grid(l, 20rem);
+    --spacer: #{spruce.spacer(m)};
+    @include spruce.layout-grid(var(--spacer), 20rem);
+
+    @include spruce.breakpoint(md) {
+      --spacer: #{spruce.spacer(l)};
+    }
   }
 }
 
 .project {
+  --border-radius: clamp(0.5rem, 2vw, 3rem);
   @include spruce.layout-stack(xs);
-  background-color: #000000;
-  background-color: #fff3e6;
-  background-color: #f9f9f9;
-  // color: hsl(0 0% 100%);
-  color: #000000;
-  padding: spruce.spacer(l);
+  background-color: hsl(0 0% 98%);
+  color: spruce.color(text);
+  padding: spruce.spacer-clamp(m, l);
   text-decoration: none;
-  border-radius: 0 3rem 3rem 3rem;
+  border-radius: 0 var(--border-radius) var(--border-radius) var(--border-radius);
 
   h2 {
-    // color: hsl(0 0% 100%);
     font-family: spruce.$font-family-base;
   }
 
