--- a/src/scss/content/_title.scss
+++ b/src/scss/content/_title.scss
@@ -1,5 +1,6 @@
 @use 'sprucecss/scss/spruce';
 
 .post-title {
-  font-size: spruce.responsive-font-size(5rem);
+  font-size: spruce.responsive-font-size(5rem, 40, '5vw');
+  margin-block: spruce.spacer-clamp(m, l) spruce.spacer(m);
 }
